<resources>
    <string name="app_name">FreeRun</string>
    <string name="run">Run!</string>
    <string name="collectingTitle">Freerun - Run!</string>
    <string name="time">Time:</string>
    <string name="currentSpeed">Current Speed:</string>
    <string name="time_default">--:-- min</string>
    <string name="fontFile">SourceSansPro-Bold.ttf</string>
    <string name="speedDefault">-- km/h</string>
    <string name="startButton">Start tracking</string>
    <string name="averageSpeed">Avg. Speed:</string>
    <string name="distanceDefault">-- km/h</string>
    <string name="distance">Distance:</string>
    <string name="stopButton">Stop tracking</string>
    <string name="continueTracking">Continue tracking</string>
    <string name="stopTracking">Stop tracking</string>
    <string name="share">Share</string>
    <string name="select_send_option">Send using:</string>
    <string name="shareMessage">Select the file(s) to share:</string>
    <string name="err_writing_not_possible_title">Writing data not possible</string>
    <string name="err_writing_not_possible_msg">It is not possible to write the collected data. Oh no!</string>
    <string name="ok">Ok</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="ask_to_enable_gps">Do you want to enable GPS?</string>
</resources>
