<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:rowCount="4"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <phelat.widget.PlusTextView
            android:id="@+id/collectingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_vertical|fill_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/collectingTitle"
            android:textAlignment="center"
            android:textColor="@color/collectingText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:font="@string/fontFile" />

        <phelat.widget.PlusTextView
            android:id="@+id/collectingTimeLabel"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_vertical|fill_horizontal|fill"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:text="@string/time"
            android:textColor="@color/collectingText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:font="@string/fontFile" />

        <phelat.widget.PlusTextView
            android:id="@+id/collectingTime"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_vertical|fill_horizontal|fill"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:text="@string/time_default"
            android:textAlignment="center"
            android:textColor="@color/collectingText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:font="@string/fontFile" />

        <phelat.widget.PlusTextView
            android:id="@+id/collectingCurrentSpeedLabel"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_vertical|fill_horizontal|fill"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:text="@string/currentSpeed"
            android:textColor="@color/collectingText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:font="@string/fontFile" />

    </GridLayout>
</android.support.constraint.ConstraintLayout>